--- a/helloworld/templates/base.html
+++ b/helloworld/templates/base.html
@@ -11,14 +11,14 @@
 
     <body>
         <h1>
-            {% if user.is_authenticated %}
-                Welcome 
-                '{{ user.username }}'
-                [<a href="{% url 'logout' %}">Logout</a>]
-            {% else %}
-                [<a href="{% url 'login' %}">Login</a>]
-            {% endif %}
+            Task Application
         </h1>
         {% block content %}{% endblock content %}
     </body>
+    <footer>
+        <a href="{% url 'home' %}">[Home]</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">[Logout {{ user.username }}]</a>
+        {% endif %}
+    </footer>
 </html>
