--- a/helloworld/templates/task_new.html
+++ b/helloworld/templates/task_new.html
@@ -3,5 +3,6 @@
     <form method="post">{% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
+    <input type="submit" value="Cancel" name="cancel"/>
 </form>
 {% endblock %}
